Fix z-index for close btn

--- a/src/assets/styles/Intro.css
+++ b/src/assets/styles/Intro.css
@@ -123,7 +123,7 @@
   box-sizing: border-box;
   line-height: 50px;
   display: inline-block;
-  z-index: 0;
+  z-index: 2;
 }
 .close-btn:before,
 .close-btn:after {
